<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">day31</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="day31_b1">IP拨号器</string>
    <string name="day31_b2">手机劫持</string>
    <string name="day31_b3">自定义广播</string>
    <string name="day31_b4">有序广播</string>
    <string name="day31_b5">服务</string>
    <string name="day31_b6">电话录音机</string>
    <string name="b1_ipdialer">请输入IP线路</string>
    <string name="b1_save">保存</string>
    <string name="b2_text">你的手机已被劫持，请给XXX帐号转账XXXX万元</string>
    <string name="b2_button">转账</string>
    <string name="b3_sendcustom">发送自定义广播</string>
    <string name="b4_order">发送有序广播</string>
    <string name="b5_start">启动服务</string>
    <string name="b5_stop">关闭服务</string>
    <string name="b6_callrecorder">开启电话录音机</string>

</resources>
